added training script

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+data/
+!data/__init__.py
+!data/mit_dataset.py
+!data/cgintrinsics_dataset.py
+
+runs/
+checkpoints/
